--- a/index.html
+++ b/index.html
@@ -16,91 +16,78 @@
 
 <body>
 
-  <header class="header" data-component="Header">
-                <a href="index.html" class="header__brand">
-                    <img src="assets/images/logo.png" alt="logo_gab" />
-                </a>
+    <header class="header" data-component="Header">
+        <a href="index.html" class="header__brand">
+            <img src="assets/images/logo.png" alt="logo_gab" />
+        </a>
 
-                <nav class="nav-primary">
-                    <ul>
-                        <li>
-                            <div class="liens-wrapper">
-                                <span class="animation-hover inner-wrapper">
-                                    <a
-                                        href="index.html"
-                                        class="nav-primary__item animation-a"
-                                        >Accueil</a
-                                    >
-                                </span>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="liens-wrapper">
-                                <span class="animation-hover inner-wrapper">
-                                    <a
-                                        href="projets.html"
-                                        class="nav-primary__item animation-a"
-                                        >Projets</a
-                                    >
-                                </span>
-                            </div>
-                        </li>
-                        <li class="nav-right">
-                            <div class="liens-wrapper">
-                                <span class="animation-hover inner-wrapper">
-                                    <a
-                                        href="page-a-propos.html"
-                                        class="nav-primary__item animation-a"
-                                        >À propos</a
-                                    >
-                                </span>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="liens-wrapper">
-                                <span class="animation-hover inner-wrapper">
-                                    <a
-                                        href="contact.html"
-                                        class="nav-primary__item animation-a"
-                                        >Contact</a
-                                    >
-                                </span>
-                            </div>
-                        </li>
-                    </ul>
-                </nav>
-                <button class="header__toggle js-toggle">
-                    <div class="points">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+        <nav class="nav-primary">
+            <ul>
+                <li>
+                    <div class="liens-wrapper">
+                        <span class="animation-hover inner-wrapper">
+                            <a href="index.html" data-i18="menu.home" class="nav-primary__item animation-a">Accueil</a>
+                        </span>
                     </div>
-                    <div class="barres">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                </li>
+                <li>
+                    <div class="liens-wrapper">
+                        <span class="animation-hover inner-wrapper">
+                            <a href="projects.html" data-i18="menu.projects"
+                                class="nav-primary__item animation-a">Projets</a>
+                        </span>
                     </div>
-                </button>
-            </header>
+                </li>
+                <li class="nav-right">
+                    <div class="liens-wrapper">
+                        <span class="animation-hover inner-wrapper">
+                            <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
+                                propos</a>
+                        </span>
+                    </div>
+                </li>
+                <li>
+                    <div class="liens-wrapper">
+                        <span class="animation-hover inner-wrapper">
+                            <a href="contact.html" data-i18="menu.contacts"
+                                class="nav-primary__item animation-a">Contact</a>
+                        </span>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+        <button class="header__toggle js-toggle">
+            <div class="points">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="barres">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </button>
+    </header>
 
-  <main>
-    <section class="hero">
-      <div class="hero__content">
-        <h1 class="hero__title">Gabriel Gauthier</h1>
-        <p class="hero__subtitle">
-          Designer technique – Programmeur gameplay
-        </p>
+    <main>
+        <section class="hero">
+            <div class="hero__content">
+                <h1 class="hero__title">Gabriel Gauthier</h1>
+                <p class="hero__subtitle">
+                    Designer technique – Programmeur gameplay
+                </p>
 
-        <div class="hero__socials">
-          <a href="#" aria-label="Email">✉️</a>
-          <a href="#" aria-label="LinkedIn">in</a>
-          <a href="#" aria-label="YouTube">▶</a>
-        </div>
+                <div class="hero__socials">
+                    <a href="#" aria-label="Email">✉️</a>
+                    <a href="#" aria-label="LinkedIn">in</a>
+                    <a href="#" aria-label="YouTube">▶</a>
+                </div>
 
-        <a href="#" class="btn-primary">Visualisez mon CV</a>
-      </div>
-    </section>
-  </main>
+                <a href="#" class="btn-primary">Visualisez mon CV</a>
+            </div>
+        </section>
+    </main>
 
 </body>
 
