--- a/templateProject1.html
+++ b/templateProject1.html
@@ -69,7 +69,7 @@
         </button>
     </header>
 
-<section class="projectStory">
+<body class="projectStory">
 
   <section class="storyHero">
     <h1 class="storyTitle">Nom du projet</h1>
@@ -79,23 +79,19 @@
 
     <div class="heroMedia">
       <!-- Vidéo YouTube -->
-      <!--
+
       <div class="videoWrapper">
-        <iframe
-          src="https://www.youtube.com/embed/VIDEO_ID"
-          title="Trailer du projet"
-          loading="lazy"
-          allowfullscreen>
+        <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Trailer du projet" loading="lazy" allowfullscreen>
         </iframe>
       </div>
-      -->
+
 
       <!-- Image -->
-      <img src="assets/images/Big.png" alt="Screenshot du projet">
+      <!-- <img src="assets/images/Big.png" alt="Screenshot du projet"> -->
     </div>
   </section>
 
-    <section class="storyChapter">
+  <section class="storyChapter">
     <div class="chapterText">
       <h2>Le projet</h2>
       <p>
@@ -118,11 +114,11 @@
       -->
 
       <!-- Image -->
-      <img src="assets/images/project-01.png" alt="Image du projet">
+      <img src="assets/images/Medium.png" alt="Image du projet">
     </div>
   </section>
 
-    <section class="storyChapter reverse">
+  <section class="storyChapter reverse">
     <div class="chapterText">
       <h2>Le processus</h2>
       <p>
@@ -131,11 +127,11 @@
     </div>
 
     <div class="chapterMedia">
-      <img src="assets/images/process.png" alt="Processus">
+      <img src="assets/images/Medium.png" alt="Processus">
     </div>
   </section>
 
-    <section class="storyFull">
+  <section class="storyFull">
     <!-- Vidéo YouTube -->
     <!--
     <div class="videoWrapper">
@@ -149,10 +145,10 @@
     -->
 
     <!-- Image -->
-    <img src="assets/images/fullscreen.png" alt="Vue immersive">
+    <img src="assets/images/Medium.png" alt="Vue immersive">
   </section>
 
-    <section class="storyCredits">
+  <section class="storyCredits">
     <h2>Crédits</h2>
     <ul>
       <li><strong>Rôle :</strong> Gameplay programmer</li>
@@ -162,4 +158,4 @@
     </ul>
   </section>
 
-</section>
+</body>
