--- a/projectTemplate2.html
+++ b/projectTemplate2.html
@@ -14,59 +14,52 @@
     <script type="module" src="scripts/main.js"></script>
 </head>
 
-<body>
-  <header class="header" data-component="Header">
-    <a href="index.html" class="header__brand">
-      <img src="assets/images/logo.png" alt="logo_gab" />
-    </a>
+<body data-component="Scrolly">
+      <header class="header" data-component="Header">
+        <a href="index.html" class="header__brand">
+            <img src="assets/images/logo.png" alt="logo_gab" />
+        </a>
 
-    <nav class="nav-primary">
-      <ul>
-        <li>
-          <div class="liens-wrapper">
-            <span class="animation-hover inner-wrapper">
-              <a href="index.html" data-i18="menu.home" class="nav-primary__item animation-a">Accueil</a>
-            </span>
-          </div>
-        </li>
-        <li>
-          <div class="liens-wrapper">
-            <span class="animation-hover inner-wrapper">
-              <a href="projects.html" data-i18="menu.projects" class="nav-primary__item animation-a">Projets</a>
-            </span>
-          </div>
-        </li>
-        <li class="nav-right">
-          <div class="liens-wrapper">
-            <span class="animation-hover inner-wrapper">
-              <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
-                propos</a>
-            </span>
-          </div>
-        </li>
-        <li>
-          <div class="liens-wrapper">
-            <span class="animation-hover inner-wrapper">
-              <a href="contact.html" data-i18="menu.contacts" class="nav-primary__item animation-a">Contact</a>
-            </span>
-          </div>
-        </li>
-      </ul>
-    </nav>
-    <button class="header__toggle js-toggle">
-      <div class="points">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div class="barres">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </button>
-  </header>
-
+        <nav class="nav-primary">
+            <ul>
+                <li>
+                    <div class="liens-wrapper">
+                        <span class="animation-hover inner-wrapper">
+                            <a href="index.html" data-i18="menu.home" class="nav-primary__item animation-a">Accueil</a>
+                        </span>
+                    </div>
+                </li>
+                <li>
+                    <div class="liens-wrapper">
+                        <span class="animation-hover inner-wrapper">
+                            <a href="projects.html" data-i18="menu.projects"
+                                class="nav-primary__item animation-a">Projets</a>
+                        </span>
+                    </div>
+                </li>
+                <li class="nav-right">
+                    <div class="liens-wrapper">
+                        <span class="animation-hover inner-wrapper">
+                            <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
+                                propos</a>
+                        </span>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+        <button class="header__toggle js-toggle">
+            <div class="points">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="barres">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </button>
+    </header>
   <section class="projectStory">
 
     <!-- HERO -->
@@ -80,14 +73,14 @@
     <!-- CHAPTER 1 -->
     <section class="storyChapter">
       <div class="chapterText">
-        <h2>Le projet</h2>
-        <p>
+        <h2 data-scrolly='fromBottom'>Le projet</h2>
+        <p data-scrolly='fromBottom'>
           Présentation du projet, contexte, objectif principal,
           type de jeu, durée, équipe, etc.
         </p>
       </div>
 
-      <div class="chapterMedia">
+      <div class="chapterMedia" data-scrolly='fromBottom'>
         <div class="videoWrapper">
           <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" title="Gameplay trailer" loading="lazy"
             allowfullscreen>
@@ -97,8 +90,8 @@
     </section>
 
     <!-- FULL VIDEO BREAK -->
-    <section class="storyFull">
-      <div class="videoWrapper">
+    <section class="storyFull" >
+      <div class="videoWrapper" data-scrolly='fromBottom'>
         <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" title="Gameplay showcase" loading="lazy" allowfullscreen>
         </iframe>
       </div>
@@ -107,14 +100,14 @@
     <!-- CHAPTER 2 -->
     <section class="storyChapter reverse">
       <div class="chapterText">
-        <h2>Le processus</h2>
-        <p>
+        <h2 data-scrolly='fromBottom'>Le processus</h2>
+        <p data-scrolly='fromBottom'>
           Ton workflow, les outils utilisés (Unity, Unreal, Blender),
           les itérations, les choix techniques.
         </p>
       </div>
 
-      <div class="chapterMedia">
+      <div class="chapterMedia" data-scrolly='fromBottom'>
         <img src="assets/images/Big.png" alt="Processus de création">
       </div>
     </section>
@@ -122,15 +115,15 @@
     <!-- CHAPTER 3 -->
     <section class="storyChapter">
       <div class="chapterText">
-        <h2>Les défis</h2>
-        <p>
+        <h2 data-scrolly='fromBottom'>Les défis</h2>
+        <p data-scrolly='fromBottom'>
           Problèmes rencontrés, solutions techniques,
           apprentissages importants.
         </p>
       </div>
 
       <div class="chapterMedia">
-        <div class="videoWrapper">
+        <div class="videoWrapper" data-scrolly='fromBottom'>
           <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" title="Technical challenge" loading="lazy"
             allowfullscreen>
           </iframe>
@@ -139,7 +132,7 @@
     </section>
 
     <!-- CREDITS -->
-    <section class="storyCredits">
+    <section class="storyCredits" data-scrolly='fromBottom'>
       <h2>Crédits</h2>
       <ul>
         <li><strong>Rôle :</strong> Gameplay programmer</li>
