--- a/index.html
+++ b/index.html
@@ -2,85 +2,87 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gabriel Gauthier | Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gabriel Gauthier | Portfolio</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/main.css">
-  <script type="module" src="scripts/main.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <script type="module" src="scripts/main.js"></script>
 </head>
 
 <body>
+    <div data-component="PageTransition" class="page">
 
-    <header class="header" data-component="Header">
-        <a href="index.html" class="header__brand">
-            <img src="assets/images/logo.png" alt="logo_gab" />
-        </a>
+        <header class="header" data-component="Header">
+            <a href="index.html" class="header__brand">
+                <img src="assets/images/logo.png" alt="logo_gab" />
+            </a>
 
-        <nav class="nav-primary">
-            <ul>
-                <li>
-                    <div class="liens-wrapper">
-                        <span class="animation-hover inner-wrapper">
-                            <a href="index.html" data-i18="menu.home" class="nav-primary__item animation-a">Accueil</a>
-                        </span>
-                    </div>
-                </li>
-                <li>
-                    <div class="liens-wrapper">
-                        <span class="animation-hover inner-wrapper">
-                            <a href="projects.html" data-i18="menu.projects"
-                                class="nav-primary__item animation-a">Projets</a>
-                        </span>
-                    </div>
-                </li>
-                <li class="nav-right">
-                    <div class="liens-wrapper">
-                        <span class="animation-hover inner-wrapper">
-                            <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
-                                propos</a>
-                        </span>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-        <button class="header__toggle js-toggle">
-            <div class="points">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="barres">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </button>
-    </header>
-
-    <main>
-        <section class="hero">
-            <div class="hero__content">
-                <h1 class="hero__title">Gabriel Gauthier</h1>
-                <p class="hero__subtitle">
-                    Designer technique – Programmeur gameplay
-                </p>
-
-                <div class="hero__socials">
-                    <a href="#" aria-label="Email">✉️</a>
-                    <a href="#" aria-label="LinkedIn">in</a>
-                    <a href="#" aria-label="YouTube">▶</a>
+            <nav class="nav-primary">
+                <ul>
+                    <li>
+                        <div class="liens-wrapper">
+                            <span class="animation-hover inner-wrapper">
+                                <a href="index.html" data-i18="menu.home"
+                                    class="nav-primary__item animation-a">Accueil</a>
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="liens-wrapper">
+                            <span class="animation-hover inner-wrapper">
+                                <a href="projects.html" data-i18="menu.projects"
+                                    class="nav-primary__item animation-a">Projets</a>
+                            </span>
+                        </div>
+                    </li>
+                    <li class="nav-right">
+                        <div class="liens-wrapper">
+                            <span class="animation-hover inner-wrapper">
+                                <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
+                                    propos</a>
+                            </span>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+            <button class="header__toggle js-toggle">
+                <div class="points">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
+                <div class="barres">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </button>
+        </header>
 
-                <a href="#" class="btn-primary">Visualisez mon CV</a>
-            </div>
-        </section>
-    </main>
+        <main>
+            <section class="hero">
+                <div class="hero__content">
+                    <h1 class="hero__title">Gabriel Gauthier</h1>
+                    <p class="hero__subtitle">
+                        Designer technique – Programmeur gameplay
+                    </p>
 
+                    <div class="hero__socials">
+                        <a href="#" aria-label="Email">✉️</a>
+                        <a href="#" aria-label="LinkedIn">in</a>
+                        <a href="#" aria-label="YouTube">▶</a>
+                    </div>
+
+                    <a href="#" class="btn-primary">Visualisez mon CV</a>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
