Adding parallax effect on about picture

--- a/about.html
+++ b/about.html
@@ -89,8 +89,7 @@
                 <p class="aboutText">J’adore apprendre de nouvelles choses. Si j’ai une opportunité de m’améliorer ou de
                     développer de nouvelles compétences, je serai au rendez-vous !</p>
             </div>
-
-            <div class="aboutImage">
+            <div class="aboutImage parallax" data-component="Parallax" data-parallax="mouse" data-strength="10">
                 <img src="assets/images/Big.png" alt="Gabriel Gauthier" />
             </div>
         </section>
