Adding video hover on project card

--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script type="module" src="scripts/main.js"></script>
 </head>
 
@@ -66,34 +67,27 @@
 
 
 
+<section class="projects">
+    <h2 class="projectsTitle" data-scrolly='fromBottom'>Projets vedettes</h2>
 
-            <section class="projects">
-                <h2 class="projectsTitle" data-scrolly='fromBottom'>Projets vedettes</h2>
+    <div class="projectGrid">
+        <article class="projectCard has-video">
+            <div class="projectMedia media-container" data-component="ProjectVideo">
+                <img src="assets/images/Project-Card.png" alt="Bolt'n'Punch" />
+                <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline
+                    preload="auto"></video>
+            </div>
 
-                <div class="projectGrid">
-                    <article class="projectCard" data-scrolly='fromBottom'>
-                        <img class="projectImage" src="assets/images/Project-Card.png" alt="Bolt'n'Punch" />
+            <h3 class="projectTitle">Bolt'n'Punch</h3>
+            <p class="projectMeta">Beat'em Up<br />Unreal Engine 5</p>
+            <p class="projectDescription">Bolt’n’Punch est un jeu...</p>
+            <a href="templateProject2.html" class="projectButton">Voir le projet</a>
+        </article>
 
-                        <h3 class="projectTitle">Template 1</h3>
+        <article class="projectCard" data-scrolly='fromBottom'>
+            <img class="projectImage" src="assets/images/Project-Card.png" alt="Bolt'n'Punch" />
 
-                        <p class="projectMeta">
-                            Beat'em Up<br />
-                            Unreal Engine 5
-                        </p>
-
-                        <p class="projectDescription">
-                            Bolt’n’Punch est un jeu que j’ai développé avec mes camarades finissants à l’UQAT. Nous
-                            avons
-                            suivi tout
-                            le processus de production en entreprise, jusqu’à la publication du jeu sur Steam.
-                        </p>
-
-                        <a href="templateProject1.html" class="projectButton">Voir le projet</a>
-                    </article>
-                    <article class="projectCard" data-scrolly='fromBottom'>
-                        <img class="projectImage" src="assets/images/Project-Card.png" alt="Bolt'n'Punch" />
-
-                        <h3 class="projectTitle">Template 2</h3>
+            <h3 class="projectTitle">Template 2</h3>
 
                         <p class="projectMeta">
                             Beat'em Up<br />
