Cleaning code and getting ready to implement the official content

--- a/projectTemplate2.html
+++ b/projectTemplate2.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gabriel Gauthier | Portfolio</title>
-
+  <title>Gabriel Gauthier | ProjectTemplate</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <script type="module" src="scripts/main.js"></script>
 </head>
@@ -25,21 +24,21 @@
         <nav class="nav-primary">
           <ul>
             <li>
-              <div class="liens-wrapper">
+              <div class="links-wrapper">
                 <span class="animation-hover inner-wrapper">
                   <a href="index.html" data-i18="menu.home" class="nav-primary__item animation-a">Accueil</a>
                 </span>
               </div>
             </li>
             <li>
-              <div class="liens-wrapper">
+              <div class="links-wrapper">
                 <span class="animation-hover inner-wrapper">
                   <a href="projects.html" data-i18="menu.projects" class="nav-primary__item animation-a">Projets</a>
                 </span>
               </div>
             </li>
             <li class="nav-right">
-              <div class="liens-wrapper">
+              <div class="links-wrapper">
                 <span class="animation-hover inner-wrapper">
                   <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
                     propos</a>
@@ -49,11 +48,6 @@
           </ul>
         </nav>
         <button class="header__toggle js-toggle">
-          <div class="points">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
           <div class="barres">
             <span></span>
             <span></span>
