--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gabriel Gauthier | Portfolio</title>
+    <title>Gabriel Gauthier | Projects</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://www.youtube.com/iframe_api"></script>
     <script type="module" src="scripts/main.js"></script>
 </head>
 
@@ -26,7 +25,7 @@
                 <nav class="nav-primary">
                     <ul>
                         <li>
-                            <div class="liens-wrapper">
+                            <div class="links-wrapper">
                                 <span class="animation-hover inner-wrapper">
                                     <a href="index.html" data-i18="menu.home"
                                         class="nav-primary__item animation-a">Accueil</a>
@@ -34,7 +33,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="liens-wrapper">
+                            <div class="links-wrapper">
                                 <span class="animation-hover inner-wrapper">
                                     <a href="projects.html" data-i18="menu.projects"
                                         class="nav-primary__item animation-a">Projets</a>
@@ -42,7 +41,7 @@
                             </div>
                         </li>
                         <li class="nav-right">
-                            <div class="liens-wrapper">
+                            <div class="links-wrapper">
                                 <span class="animation-hover inner-wrapper">
                                     <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
                                         propos</a>
@@ -52,11 +51,6 @@
                     </ul>
                 </nav>
                 <button class="header__toggle js-toggle">
-                    <div class="points">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
                     <div class="barres">
                         <span></span>
                         <span></span>
@@ -67,27 +61,27 @@
 
 
 
-<section class="projects">
-    <h2 class="projectsTitle" data-scrolly='fromBottom'>Projets vedettes</h2>
+            <section class="projects">
+                <h2 class="projectsTitle" data-scrolly='fromBottom'>Projets vedettes</h2>
 
-    <div class="projectGrid">
-        <article class="projectCard has-video">
-            <div class="projectMedia media-container" data-component="ProjectVideo">
-                <img src="assets/images/Project-Card.png" alt="Bolt'n'Punch" />
-                <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline
-                    preload="auto"></video>
-            </div>
+                <div class="projectGrid">
+                    <article class="projectCard has-video">
+                        <div class="projectMedia media-container" data-component="ProjectVideo">
+                            <img src="assets/images/Project-Card.png" alt="Bolt'n'Punch" />
+                            <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline
+                                preload="auto"></video>
+                        </div>
 
-            <h3 class="projectTitle">Bolt'n'Punch</h3>
-            <p class="projectMeta">Beat'em Up<br />Unreal Engine 5</p>
-            <p class="projectDescription">Bolt’n’Punch est un jeu...</p>
-            <a href="templateProject2.html" class="projectButton">Voir le projet</a>
-        </article>
+                        <h3 class="projectTitle">Bolt'n'Punch</h3>
+                        <p class="projectMeta">Beat'em Up<br />Unreal Engine 5</p>
+                        <p class="projectDescription">Bolt’n’Punch est un jeu...</p>
+                        <a href="templateProject2.html" class="projectButton">Voir le projet</a>
+                    </article>
 
-        <article class="projectCard" data-scrolly='fromBottom'>
-            <img class="projectImage" src="assets/images/Project-Card.png" alt="Bolt'n'Punch" />
+                    <article class="projectCard" data-scrolly='fromBottom'>
+                        <img class="projectImage" src="assets/images/Project-Card.png" alt="Bolt'n'Punch" />
 
-            <h3 class="projectTitle">Template 2</h3>
+                        <h3 class="projectTitle">Template 2</h3>
 
                         <p class="projectMeta">
                             Beat'em Up<br />
