--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="css/main.css">
     <script type="module" src="scripts/main.js"></script>
@@ -25,7 +26,7 @@
             <nav class="nav-primary">
                 <ul>
                     <li>
-                        <div class="liens-wrapper">
+                        <div class="links-wrapper">
                             <span class="animation-hover inner-wrapper">
                                 <a href="index.html" data-i18="menu.home"
                                     class="nav-primary__item animation-a">Accueil</a>
@@ -33,7 +34,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="liens-wrapper">
+                        <div class="links-wrapper">
                             <span class="animation-hover inner-wrapper">
                                 <a href="projects.html" data-i18="menu.projects"
                                     class="nav-primary__item animation-a">Projets</a>
@@ -41,7 +42,7 @@
                         </div>
                     </li>
                     <li class="nav-right">
-                        <div class="liens-wrapper">
+                        <div class="links-wrapper">
                             <span class="animation-hover inner-wrapper">
                                 <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
                                     propos</a>
@@ -51,11 +52,6 @@
                 </ul>
             </nav>
             <button class="header__toggle js-toggle">
-                <div class="points">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
                 <div class="barres">
                     <span></span>
                     <span></span>
@@ -69,7 +65,7 @@
                 <div class="hero__content">
                     <h1 class="hero__title">Gabriel Gauthier</h1>
                     <p class="hero__subtitle">
-                        Designer technique – Programmeur gameplay
+                        Programmeur technique – Développement de jeux et de logiciels
                     </p>
 
                     <div class="hero__socials">
